Fix z-index nav

--- a/froggy-gaming/src/CategoryLayout/CategoryContainer.css
+++ b/froggy-gaming/src/CategoryLayout/CategoryContainer.css
@@ -1,4 +1,4 @@
-.category-main {
+.category-container {
     max-width: 1050px;
     margin: 2rem auto;
 }
